--- a/services/idp/src/fancy-background.css
+++ b/services/idp/src/fancy-background.css
@@ -12,6 +12,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(./images/background.jpg);
+  background-image: url(./images/background.png);
   z-index: 0;
 }
